app/styles/main.scss
/* ... */
.archive a:hover > h3 {
	background-color: #007369;
}

/* Document */
.document-wrapper {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	-webkit-box-align: stretch;
	-moz-box-align: stretch;
	-webkit-align-items: stretch;
	-ms-flex-align: stretch;
	align-items: stretch;
	margin: -2em -2em;
}
.document {
	width: 80%;
	padding: 2em 0 0 2em;
}
.cover-header {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
}
.cover-heaver > a {
	display: block;
}
.cover-header img {
	margin-right: 1em;
}
.cover-header h2 {
	margin-bottom: 0;
}
.cover-header h2 + h3 {
	margin: 0 0 .8em 0;
}
.namelist {
  span.delete {
    color: #40a662;
    font-weight: bold;
    text-decoration: none;
    cursor: pointer;
  }

  > span:not(.empty):not(:last-child)::after {
    content: ',\20'
  }
}
.document-header,
.sighting-wrapper {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
}
.sighting-wrapper > * {
	width: 50%;
}
.sighting-wrapper > *:first-child {
	margin-right: 2em;
}
.sighting-wrapper h2+h3 {
	margin-top: 0;
}
.document-header > * {
	width: 50%;
}
.document-meta {
	padding-right: 1em;
}
.document-meta h2+h3 {
	margin: 0 0 1em 0;
}
.document-actions {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
}
.document-actions > * {
	flex: 1 0 auto;
	margin: 0 1em 1em 0;
}
.shownotes-meta {
	padding-right: 2em;
}
.input-group {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
}
.box-wrapper .input-group {
	margin-bottom: 0;
}
.input-group {
	margin: 1em 0;
}
.input-group > *:last-child {
	margin-left: 1em;
	width: auto;
	min-width: 7em;
}
.namelist span {
	white-space: nowrap;
}
.namelist a {
	display: inline-block;
	vertical-align: middle;
}
.document .editor {
	margin-left: -2em;
}
.editor > iframe {
  width: 100%;
  height: 300px;
}

/* Chat */
.chat {
	width: 20%;
	height: 100vh;
	overflow-y: scroll;
	box-shadow: 0 .25em 1em rgba(0,0,0,.8);
}
.chat p {
	font-size: .8em;
	padding: .25em;
}
.chat p:last-of-type {
	margin-bottom: 5.625em;
}
.chat time {
	float: right;
	padding: .25em;
	opacity: .5;
}
.chat-input {
	background-color: #fefefe;
	box-shadow: 0.5em -0.5em .5em 0.1em rgba(0, 0, 0, 0.3);
	position: fixed;
	bottom: 0;
}
.chat-input > * {
	border-radius: 0;
}

/* Covers */
img.cover {
	width: 100px;
	height: 100px;
	border-radius: .4em;
}
.coverlist {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
}
.coverlist span {
	margin: 0 1em 1em 0;
	cursor: pointer;
	position: relative;
}
.coverlist span:after {
	content: ' ';
	color: transparent;
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	border: .5em solid #40a662;
	border-radius: .4em;
	opacity: 0;
}
.coverlist span:hover:after {
	opacity: 1;
}
.coverlist span.active:after {
	border: .5em solid #007369;
	opacity: 1;
}

/* Read-only archive */
.document-list h2,
.document-block h2 {
	font-weight: normal;
	margin-bottom: .7em;
}
.document-list *[data-tooltip]:after,
.document-block *[data-tooltip]:after {
	width: 7em; /* 12:34:56.789 */
}

/* List view */
.document-list h2 span {
	color: #999; 
	font-size: 1em;
}
.document-list ul {
	list-style: none;
	padding-left: 0;
	margin-bottom: 1em;
}
.document-list ul ul {
	margin-left: 1em;
}
.document-list li a,
.document-list span {
	position: relative;
}

/* Block view */
.document-block dl:not(:last-of-type) {
	margin-bottom: 1em;
}
.document-block dt {
	color: #999;
	font-size: 1.5em;
	line-height: 1.25;
	margin-right: 1em;
}
.document-block dd span {
	line-height: 2.5;
}
.document-block span {
	background-color: #eee;
	position: relative;
	padding: .5em;
	border-radius: .4em;
	display: inline-block;
}

/* User profiles */
ul.profile {
	display: table;
	padding: 0;
}
ul.profile li {
	display: table-row;
}
ul.profile li:before {
	display: table-cell;
	content: attr(data-social) ':';
	font-weight: bold;
	padding-right: 1em;
}

/* Icon list */
ul.iconlist {
	list-style: none;
	padding-left: 0;
}
.iconlist li {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	margin-bottom: 2em;
}
.iconlist span {
	vertical-align: top;
}
.iconlist span:first-child {
	color: #999;
	font-size: 2em;
	margin-right: .5em;
}
.iconlist h3 {
	margin-bottom: 0;
}

/* Color picker */
.sp-replacer {
	color: inherit;
	padding: 0;
	border: none;
}
.sp-preview {
	border: 1px solid #111;
}
.sp-picker-container {
	width: 15em;
	border-left: none;
}
.sp-container {
	background-color: #eee;
	border: 1px solid #111;
}
.sp-cancel {
	color: inherit;
}

/* Styleguide */
.colorblock {
	width: 5em;
	height: 5em;
	position: relative;
	border: 3px solid #111;
	border-radius: .4em;
}
.colorblock span {
	line-height: 1.6;
	position: absolute;
	top: 0;
	left: 6em;
	width: 10em;
}

/* Importer Logs */
.importerlog {
	table {
		td {
			vertical-align: top;
			border: 3px solid #eee;
		}
	}

	.succeeded {
		background-color: #00AF00;
	}
	.failed {
		background-color: #AF0000;
	}
}

/* Misc */
.rules > *:not(:last-child) {
	margin-bottom: 1em;
}

/**
 * (C)Leanest CSS spinner ever
 * http://lea.verou.me/2013/11/cleanest-css-spinner-ever/
 */

@keyframes spin {
	to { transform: rotate(1turn); }
}
/* ... */

